--- a/src/index.html
+++ b/src/index.html
@@ -6,63 +6,72 @@
     <title>04 - Webpack</title>
   </head>
   <body>
-    <div id="page-wrap" data-scroll-container>
-      <section id="start" data-scroll-section data-scroll-section-inview>
-	<div id="comedia-miseria">
-	  <h1 data-scroll="">
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="8">
-	      <span>C </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="4">
-	      <span>o </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="6">
-	      <span>m </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="8">
-	      <span>e </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="10">
-	      <span>d </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="12">
-	      <span>i </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="14">
-	      <span>a </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="2">
-	      <span>&nbsp</span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="2">
-	      <span>M </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="4">
-	      <span>i </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="6">
-	      <span>s </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="8">
-	      <span>e </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="10">
-	      <span>r </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="12">
-	      <span>i </span>
-	    </span>
-	    <span data-scroll="" data-scroll-position="top" data-scroll-speed="14">
-	      <span>a </span>
-	    </span>
-	  </h1>
-	</div>
-
-	<img id="silut" src="/static/silut.svg" />
-	<img id="circulo" src="/static/circulo.svg" />
-	<img id="tipo" src="/static/tipo.svg" />
-	<img id="signi" src="/static/signi.svg" />
-      </section>
+    <div data-scroll-section>
+      <div id="page-wrap" class="smooth-scroll">
+	<section id="start">
+	  <div id="comedia-miseria">
+	    <h1 data-scroll="">
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="12">
+		<span>¿ </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="14">
+		<span>Q </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="16">
+		<span>u </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="12">
+		<span>i </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="14">
+		<span>é </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="12">
+		<span>n </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="12">
+		<span>&nbsp </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="14">
+		<span>e</span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="12">
+		<span>s </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="14">
+		<span>&nbsp </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="16">
+		<span>M </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="12">
+		<span>i </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="18">
+		<span>g </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="16">
+		<span>u </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="12">
+		<span>e </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="18">
+		<span>l </span>
+	      </span>
+	      <span data-scroll="" data-scroll-position="top" data-scroll-speed="14">
+		<span>? </span>
+	      </span>
+	    </h1>
+	  </div>
+	  <img class="logo-img" id="silut" src="/static/silut.svg" />
+	  <img class="logo-img" id="circulo" src="/static/circulo.svg" />
+	  <img class="logo-img" id="tipo" src="/static/tipo.svg" />
+	  <img class="logo-img" id="signi" src="/static/signi.svg" />
+	  <img class="logo-img" id="mic" src="/static/mic.svg" />
+	</section>
+	<section style="min-height: 100vh"></section>
+      </div>
     </div>
   </body>
 </html>
